src/index.css
@import 'tailwindcss/base';
@import 'tailwindcss/components';
@import 'tailwindcss/utilities';

* {
  margin: 0;
  padding: 0;
}

:root {
  background-color: #DFDCD8;
  font-family: kanit;
}

/* Nav Bar --------------------------------------------------------------------------*/

ul {
  list-style: none;
  color: rgb(0, 0, 0);
}
ul li {
  padding: 0 .5em .25em;
  cursor: pointer;
  position: relative;
  overflow: hidden;
  transition: .3s;
}
ul li:hover {
  color: #fff;
}
ul li:before {
  content: "";
  position: absolute;
  inset: calc(100% - 3px) 0 0 0; /* 3px = the thickness */
  background: #949978; /* the color */
  scale: 0 1;
  transition: .3s, translate 0s .3s;
}
ul:hover li:before {
  scale: 1;
}
ul li:hover:before {
  translate: 0;
  transition: .3s;
}
ul:hover li:has(~ li:hover):before {
  translate: 100% 0;
  transition: .2s .2s,scale 0s .4s;
}
ul:hover li:hover ~ li:before {
  translate: -100% 0;
  transition: .2s .2s,scale 0s .4s;
}
/* come back to above */

